--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=laravel10r
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Ze2mEkisTq+EjdO28COpdlQfeZKlk+ITbgykFg6uBTM=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://laravel10r.dev
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -12,8 +12,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel10r
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=magento241
+DB_PASSWORD=123456
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
